--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
   overflow-x: hidden;
 }
 
-/* .splash-image {
+.splash-image {
   text-align: center;
   background-image: url('images/knot_header-crop2.jpg');
   background-size:cover;
@@ -103,17 +103,23 @@ body {
   background-position-x:center;
   color: white;
 
-  width:100%;
+  width:auto;
   height: clamp(200px, 50vw, 500px);
   margin:auto;
   margin-top:0.5em;
+}
+/* 
+.responsive {
+  width: auto;
+  height: clamp(200px, 50vw, 500px);
+  margin-left: 50%;
+  transform: translateX(-50%);
 } */
 
-.splash-image {
+/* .splash-image {
   text-align: center;
   background-image: url('images/knot_header-crop2.jpg');
   background-size: clamp(100px, 200%, 2000px) auto;
-  /* background-size:cover; */
   background-repeat:no-repeat;
   background-position-x:center;
   background-position-y: 45%;
@@ -122,10 +128,8 @@ body {
   margin: 0px -10px 0px -10px;
   width:100%;
   height: clamp(200px, 50vw, 450px);
-  /* opacity: 0.8; */
-  /* max-width:1000px; */
   margin:auto;
-}
+} */
 
 .menu {
     font-family: 'IrishUncial';
